--- a/pages/collections/collections.html
+++ b/pages/collections/collections.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>itemsPage</title>
+    <title>Collections</title>
 
     <!-- WinJS references -->
     <link href="//Microsoft.WinJS.1.0/css/ui-dark.css" rel="stylesheet" />
@@ -10,30 +10,28 @@
     <script src="//Microsoft.WinJS.1.0/js/ui.js"></script>
 
     <link href="/css/default.css" rel="stylesheet" />
-    <link href="/pages/items/items.css" rel="stylesheet" />
+    <link href="/css/items.css" rel="stylesheet" />
+
     <script src="/js/data.js"></script>
-    <script src="/pages/items/items.js"></script>
+    <script src="/pages/collections/collections.js"></script>
 </head>
 <body>
-    <!-- This template is used to display each item in the ListView declared below. -->
-    
     <div class="itemtemplate" data-win-control="WinJS.Binding.Template">
         <div class="item">
             
-            <img class="item-image" src="#" data-win-bind="src: backgroundImage; alt: title" />
+            <img class="item-image" src="#" data-win-bind="src: backgroundImage; alt: collectionName" />
             <div class="item-overlay">
-                <h4 class="item-title" data-win-bind="textContent: title"></h4>
-                <h6 class="item-subtitle win-type-ellipsis" data-win-bind="textContent: subtitle"></h6>
+                <h4 class="item-title" data-win-bind="textContent: collectionName"></h4>
+                <h6 class="item-subtitle win-type-ellipsis" data-win-bind="textContent: collectionName"></h6>
             </div>
         </div>
     </div>
 
-    <!-- The content that will be loaded and displayed. -->
     <div class="itemspage fragment">
         <header aria-label="Header content" role="banner">
             <button class="win-backbutton" aria-label="Back" disabled type="button"></button>
             <h1 class="titlearea win-type-ellipsis">
-                <span class="pagetitle">Hackathon1</span>
+                <span class="pagetitle">Collections</span>
             </h1>
         </header>
         <section aria-label="Main content" role="main">
