--- a/pages/boards/boards.html
+++ b/pages/boards/boards.html
@@ -19,7 +19,7 @@
     <div class="itemtemplate" data-win-control="WinJS.Binding.Template">
         <div class="item">
             
-            <img class="item-image" src="#" data-win-bind="src: backgroundImage; alt: boardId" />
+            <img class="item-image" src="#" data-win-bind="src: thumbnail; alt: boardId" />
             <div class="item-overlay">
                 <h4 class="item-title" data-win-bind="textContent: boardId"></h4>
                 <h6 class="item-subtitle win-type-ellipsis" data-win-bind="textContent: boardId"></h6>
