--- a/pages/collections/collections.html
+++ b/pages/collections/collections.html
@@ -19,7 +19,7 @@
     <div class="itemtemplate" data-win-control="WinJS.Binding.Template">
         <div class="item">
             
-            <img class="item-image" src="#" data-win-bind="src: backgroundImage; alt: collectionName" />
+            <img class="item-image" src="#" data-win-bind="src: thumbnail; alt: collectionName" />
             <div class="item-overlay">
                 <h4 class="item-title" data-win-bind="textContent: collectionName"></h4>
                 <h6 class="item-subtitle win-type-ellipsis" data-win-bind="textContent: collectionName"></h6>
