copied drawer.js from server implementation

--- a/pages/board_detail/board_detail.html
+++ b/pages/board_detail/board_detail.html
@@ -15,12 +15,15 @@
     <link href="board_detail.css" rel="stylesheet" />
     <script type="text/javascript" src="bingsdk.js"></script>
     <script src="board_detail.js"></script>
+
+    <script src="/js/bonsai.min.js"></script>
+    <script src="/js/drawer.js"></script>
 </head>
 <body>
     <div id ="wrapper">
 
         <div id="media_board">
-            <canvas id="pain_board"></canvas>
+            <div id="canvas"></div>
             <iframe id="map" width="300px" height="300px"></iframe>
         </div>
 
